worked on titlepage.html

--- a/titlepage.html
+++ b/titlepage.html
@@ -1,9 +1,21 @@
 <html>
 <head>
 <title>Title Page</title>
+
+<style>
+body{
+background-color:blue;
+
+}
+
+</style>
 </head>
 <body>
 <h1>this is the title page</h1>
+<p>
+A title page is a page completly and dedicated to the title
+ and some other uselss stuff
+</p>
 </body>
 
 </html>
